--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "dev": "yarn start"
+    "dev": "yarn start --ios",
+    "native:client": "yarn start --ios"
   },
   "dependencies": {
     "expo": "^45.0.6",
