--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "dev": "yarn start --ios",
-    "native:client": "yarn start --ios"
+    "client:native": "yarn start --ios"
   },
   "dependencies": {
     "expo": "^45.0.6",
