--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,11 +12,15 @@
     "client:native": "yarn start --ios"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "expo": "^45.0.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2",
     "react-dom": "18.1",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "^0.18.9",
     "ui": "*"
   },
