--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,6 +12,7 @@
     "client:native": "yarn start --ios"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "expo": "^45.0.6",
@@ -19,8 +20,10 @@
     "react": "18.2",
     "react-dom": "18.1",
     "react-native": "0.68.2",
+    "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.9",
     "ui": "*"
   },
