--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
-    "client:native": "turbo run client:native"
+    "client:native": "turbo run client:native",
+    "client:web": "turbo run client:web"
   },
   "devDependencies": {
     "prettier": "^2.7.1",
