--- a/apps/native/amplify/backend/backend-config.json
+++ b/apps/native/amplify/backend/backend-config.json
@@ -10,9 +10,12 @@
         ],
         "passwordProtectionSettings": {
           "passwordPolicyCharacters": [],
-          "passwordPolicyMinLength": 8
+          "passwordPolicyMinLength": 6
         },
-        "signupAttributes": [],
+        "signupAttributes": [
+          "NAME",
+          "EMAIL"
+        ],
         "socialProviders": [],
         "usernameAttributes": [
           "EMAIL"
