--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@reduxjs/toolkit": "^1.9.2",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
@@ -31,6 +32,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.9",
+    "react-redux": "^8.0.5",
     "ui": "*"
   },
   "devDependencies": {
