--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -19,14 +19,18 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/aws-lambda": "^8.10.111",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
+    "aws-lambda": "^1.0.7",
     "expo": "^45.0.6",
     "expo-status-bar": "~1.3.0",
     "react": "18.2",
     "react-dom": "18.1",
+    "react-hook-form": "^7.43.5",
     "react-native": "0.68.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-paper": "^5.1.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
