--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@reduxjs/toolkit": "^1.9.2",
     "@types/aws-lambda": "^8.10.111",
+    "@types/react-native-vector-icons": "^6.4.13",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
@@ -32,6 +33,7 @@
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
     "react-native-paper": "^5.1.4",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
