--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,9 +12,9 @@
     "client:native": "yarn start --ios"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -25,27 +25,28 @@
     "aws-amplify": "^5.0.12",
     "aws-amplify-react-native": "^7.0.2",
     "aws-lambda": "^1.0.7",
-    "expo": "^45.0.6",
-    "expo-status-bar": "~1.3.0",
-    "react": "18.2",
-    "react-dom": "18.1",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
-    "react-native": "0.68.2",
+    "react-native": "0.71.3",
     "react-native-animatable": "^1.3.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.1.4",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.9",
+    "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
     "ui": "*"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "^18.0.22",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.69.15",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
