--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/aws-lambda": "^8.10.111",
     "@types/google-libphonenumber": "^7.4.23",
+    "@types/react-native-text-input-mask": "^0.7.6",
     "@types/react-native-vector-icons": "^6.4.13",
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-amplify": "^5.0.12",
@@ -39,6 +40,8 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg-uri": "^1.2.3",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
