--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.43.5",
     "react-native": "0.71.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.1.4",
     "react-native-phone-number-input": "^2.1.0",
