--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -39,9 +39,9 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.1.4",
     "react-native-phone-number-input": "^2.1.0",
-    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
