working with google

--- a/apps/native/.env
+++ b/apps/native/.env
@@ -1,3 +1,5 @@
  FAST_REFRESH=false
  EXPO_USE_DEV_SERVER=1
  EXPO_USE_DEV_SERVER=1 expo start
+ EXPO_REDIRECT_SIGNIN_URL_DEV='exp://192.168.100.101:19000'
+ EXPO_REDIRECT_SIGNOUT_URL_DEV='exp://192.168.100.101:19000'
