--- a/apps/native/app.json
+++ b/apps/native/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "scheme": "myapp",
+    "scheme": "exp://192.168.100.101:19000",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
